--- a/Detectors/DCS/CMakeLists.txt
+++ b/Detectors/DCS/CMakeLists.txt
@@ -45,6 +45,19 @@ o2_add_executable(
   SOURCES testWorkflow/dcs-random-data-workflow.cxx
   PUBLIC_LINK_LIBRARIES O2::Framework O2::DetectorsDCS)
 
+o2_add_executable(
+  proxy
+  COMPONENT_NAME dcs
+  SOURCES testWorkflow/dcs-proxy.cxx
+  PUBLIC_LINK_LIBRARIES O2::Framework O2::DPLUtils O2::DetectorsDCS)
+
+o2_add_executable(
+  data-client
+  COMPONENT_NAME dcs
+  SOURCES testWorkflow/dcs-data-client-workflow.cxx
+  PUBLIC_LINK_LIBRARIES O2::Framework
+  O2::DetectorsDCS)
+
 if(OpenMP_CXX_FOUND)
   target_compile_definitions(${targetName} PRIVATE WITH_OPENMP)
   target_link_libraries(${targetName} PRIVATE OpenMP::OpenMP_CXX)
